[package]
name = "c2pastrip"
version = "1.0.0"
edition = "2021"
authors = [ "Neon." ]
description = "Simple tool to remove C2PA manifests from files"
license = "MIT"
keywords = ["c2pa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c2pa = { version = "0.28.4", features = ["file_io"] }
clap = { version = "4.4.18", features = ["derive"] }
